trying to fix the generate animation problem on mobile, test deploying

--- a/public/styles.css
+++ b/public/styles.css
@@ -576,7 +576,7 @@
         margin:18px
     }
     #generate_txt{
-        margin-right: 1700px;
+        margin-right: 1685px;
         transition: 2s ease;
     }
     #loading_txt.loading{
@@ -585,7 +585,7 @@
         transition: 2s ease;
     }
     #generate_txt.loading{
-        margin-right:-1700px;
+        margin-right:-1685px;
         letter-spacing: 10ch;
         transition: 2s ease;
     }
